# darwinia-2.0

./: .gitignore  Cargo.toml  Makefile.toml  shell.nix
.github/: release-template.md
.github/workflows/: checks.yml  release.yml  staging.yml
core/inflation/: Cargo.toml
core/inflation/src/: lib.rs  test.rs
core/primitives/: Cargo.toml
core/primitives/src/: lib.rs
core/types/: Cargo.toml
core/types/src/: lib.rs
message-transact/: Cargo.toml
message-transact/src/: lib.rs  mock.rs
message-transact/src/tests/: eip1559.rs  eip2930.rs  legacy.rs  mod.rs
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  ethereum.rs  main.rs  rpc.rs  service.rs
node/src/chain_spec/: crab.rs  darwinia.rs  mod.rs  pangolin.rs  pangoro.rs
node/src/service/: executors.rs  instant_finalize.rs  mod.rs
pallet/account-migration/: Cargo.toml
pallet/account-migration/src/: lib.rs  tests.rs
pallet/account-migration/tests/: mock.rs  tests.rs
pallet/deposit/: Cargo.toml
pallet/deposit/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallet/deposit/tests/: mock.rs  tests.rs
pallet/ecdsa-authority/: Cargo.toml
pallet/ecdsa-authority/src/: lib.rs  primitives.rs
pallet/ecdsa-authority/tests/: mock.rs  tests.rs
pallet/message-gadget/: Cargo.toml
pallet/message-gadget/src/: lib.rs
pallet/message-gadget/tests/: tests.rs
pallet/message-transact/: Cargo.toml
pallet/message-transact/src/: lib.rs  mock.rs
pallet/migrate/: Cargo.toml
pallet/staking/: Cargo.toml
pallet/staking/src/: lib.rs  mock.rs
pallet/staking/tests/: mock.rs  tests.rs
pallets/message-transact/: Cargo.toml
pallets/migrate/: Cargo.toml
pallets/migrate/src/: lib.rs  mock.rs  test.rs
precompile/ark-bls12-381/: Cargo.toml
precompile/ark-bls12-381/src/bls/: mod.rs
precompile/assets/: Cargo.toml
precompile/assets/src/: mock.rs
precompile/bls12-381/: Cargo.toml
precompile/deposit/: Cargo.toml
precompile/deposit/src/: lib.rs  mock.rs  tests.rs
precompile/dispatch/src/: lib.rs
precompile/staking/: Cargo.toml
precompile/staking/src/: lib.rs  mock.rs  tests.rs
precompile/state-storage/: Cargo.toml
precompile/state-storage/src/: mock.rs
precompiles/assets/: Cargo.toml
precompiles/assets-erc20/: Cargo.toml
precompiles/assets-erc20/src/: lib.rs
precompiles/assets/src/: lib.rs  mock.rs  tests.rs
precompiles/bls12381/src/: lib.rs
precompiles/state-storage/: Cargo.toml
precompiles/state-storage/src/: lib.rs  mock.rs  tests.rs
precompiles/utils/: Cargo.toml
precompiles/utils/macro/: Cargo.toml
precompiles/utils/macro/src/: lib.rs
precompiles/utils/macro/tests/: tests.rs
precompiles/utils/src/: lib.rs
primitive/deposit/: Cargo.toml
primitive/deposit/src/: lib.rs
runtime/: Cargo.toml  build.rs
runtime/common/: Cargo.toml
runtime/common/src/: gov_origin.rs  lib.rs  test.rs  xcm_barrier.rs  xcm_configs.rs
runtime/crab/: Cargo.toml
runtime/crab/src/: lib.rs  weights.rs
runtime/crab/src/bridges_message/: darwinia.rs
runtime/crab/src/pallets/: assets.rs  bridge_dispatch.rs  bridge_grandpa.rs  bridge_messages.rs  bridge_parachains.rs  deposit.rs  ecdsa_authority.rs  evm.rs  fee_market.rs  migrate.rs  mod.rs  polkadot_xcm.rs  proxy.rs  scheduler.rs  solo_to_para.rs  staking.rs  vesting.rs
runtime/crab/src/weights/: block_weights.rs  cumulus_pallet_xcmp_queue.rs  frame_system.rs  pallet_balances.rs  pallet_bridge_grandpa.rs  pallet_fee_market.rs  pallet_session.rs  pallet_timestamp.rs
runtime/crab/tests/: account_migration.rs  mock.rs
runtime/darwinia/: Cargo.toml
runtime/darwinia/src/: lib.rs
runtime/darwinia/src/bridges_message/: crab.rs  mod.rs
runtime/darwinia/src/pallets/: assets.rs  balances.rs  bridge_dispatch.rs  bridge_grandpa.rs  bridge_messages.rs  bridge_parachains.rs  collective.rs  deposit.rs  elections_phragmen.rs  evm.rs  fee_market.rs  identity.rs  mod.rs  multisig.rs  parachain_system.rs  polkadot_xcm.rs  preimage.rs  proxy.rs  session.rs  staking.rs  treasury.rs  utility.rs  vesting.rs
runtime/darwinia/src/weights/: block_weights.rs  frame_system.rs  pallet_balances.rs  pallet_bridge_grandpa.rs  pallet_fee_market.rs  pallet_session.rs  pallet_timestamp.rs  paritydb_weights.rs
runtime/darwinia/tests/: account_migration.rs  mock.rs
runtime/pangolin/: Cargo.toml
runtime/pangolin/src/: lib.rs  migration.rs
runtime/pangolin/src/bridges_message/: pangoro.rs
runtime/pangolin/src/pallets/: assets.rs  aura.rs  bridge_dispatch.rs  bridge_messages.rs  deposit.rs  evm.rs  fee_market.rs  mod.rs  polkadot_xcm.rs  staking.rs  system.rs
runtime/pangolin/src/weights/: cumulus_pallet_xcmp_queue.rs  extrinsic_weights.rs  frame_system.rs  mod.rs  pallet_balances.rs  pallet_bridge_grandpa.rs  pallet_fee_market.rs  pallet_session.rs  (+2 more)
runtime/pangolin/tests/: account_migration.rs  mock.rs  test_account_migration.rs
runtime/pangoro/: Cargo.toml
runtime/pangoro/bridges_message/: pangolin.rs
runtime/pangoro/src/: lib.rs  migration.rs
runtime/pangoro/tests/: mock.rs
runtime/src/: lib.rs  precompiles.rs  xcm_config.rs
runtime/src/pallets/: aura.rs  aura_ext.rs  authorship.rs  balances.rs  collator_selection.rs  dmp_queue.rs  evm.rs  mod.rs  parachain_info.rs  parachain_info_.rs  parachain_system.rs  session.rs  system.rs  timestamp.rs  transaction_payment.rs  xcmp_queue.rs
runtime/src/xcm_config/: barrier.rs  mod.rs
scripts/: run_benches_for_runtime.sh
tests/: config.ts  package-lock.json  package.json  tests.ts  tsconfig.json
tests/ethereum/: test-balance.ts  test-block.ts  test-code.ts  test-constants.ts  test-contract.ts  test-nonce.ts  test-opcodes.ts  test-rpc-block.ts
tests/ethereum/contracts/: contracts_info.ts  incrementer.sol
tool/am-signer/: Cargo.toml
tool/state-processor/: Cargo.toml  rust-toolchain.toml
tool/state-processor/src/: adjust.rs  configuration.rs  main.rs  processor.rs  tests.rs  type_registry.rs  util.rs
ts-tests/: package-lock.json  package.json  truffle-config.js
ts-tests/tests/: config.ts  util.ts
ts-tests/tests/frontier/: test-rpc-constants.ts
(+33 files in other folders)
