[profile.release]
panic = "unwind"

[workspace]
members = [
	"core/*",
	"node",
	"pallet/*",
	"precompile/*",
	"runtime/*",
]

[patch."https://github.com/paritytech/substrate"]
beefy-gadget                                  = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
beefy-gadget-rpc                              = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
beefy-merkle-tree                             = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
frame-benchmarking                            = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
frame-benchmarking-cli                        = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
frame-election-provider-solution-type         = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
frame-election-provider-support               = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
frame-executive                               = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
frame-support                                 = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
frame-support-procedural                      = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
frame-support-procedural-tools                = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
frame-support-procedural-tools-derive         = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
frame-system                                  = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
frame-system-benchmarking                     = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
frame-system-rpc-runtime-api                  = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
frame-try-runtime                             = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
mmr-gadget                                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
mmr-rpc                                       = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-assets                                 = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-aura                                   = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-authority-discovery                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-authorship                             = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-babe                                   = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-bags-list                              = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-balances                               = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-beefy                                  = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-beefy-mmr                              = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-bounties                               = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-child-bounties                         = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-collective                             = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-conviction-voting                      = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-democracy                              = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-election-provider-multi-phase          = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-election-provider-support-benchmarking = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-elections-phragmen                     = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-fast-unstake                           = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-grandpa                                = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-identity                               = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-im-online                              = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-indices                                = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-membership                             = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-mmr                                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-multisig                               = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-nis                                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-nomination-pools                       = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-nomination-pools-benchmarking          = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-nomination-pools-runtime-api           = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-offences                               = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-offences-benchmarking                  = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-preimage                               = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-proxy                                  = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-ranked-collective                      = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-recovery                               = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-referenda                              = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-scheduler                              = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-session                                = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-session-benchmarking                   = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-society                                = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-staking                                = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-staking-reward-curve                   = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-staking-reward-fn                      = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-state-trie-migration                   = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-sudo                                   = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-timestamp                              = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-tips                                   = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-transaction-payment                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-transaction-payment-rpc                = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-transaction-payment-rpc-runtime-api    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-treasury                               = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-utility                                = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-vesting                                = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
pallet-whitelist                              = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-allocator                                  = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-authority-discovery                        = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-basic-authorship                           = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-block-builder                              = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-chain-spec                                 = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-chain-spec-derive                          = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-cli                                        = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-client-api                                 = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-client-db                                  = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-consensus                                  = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-consensus-aura                             = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-consensus-babe                             = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-consensus-babe-rpc                         = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-consensus-epochs                           = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-consensus-slots                            = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-executor                                   = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-executor-common                            = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-executor-wasmi                             = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-executor-wasmtime                          = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-finality-grandpa                           = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-finality-grandpa-rpc                       = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-informant                                  = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-keystore                                   = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-network                                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-network-common                             = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-network-gossip                             = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-offchain                                   = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-peerset                                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-proposer-metrics                           = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-rpc                                        = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-rpc-api                                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-rpc-server                                 = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-service                                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-state-db                                   = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-sync-state-rpc                             = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-sysinfo                                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-telemetry                                  = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-tracing                                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-tracing-proc-macro                         = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-transaction-pool                           = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-transaction-pool-api                       = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sc-utils                                      = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-api                                        = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-api-proc-macro                             = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-application-crypto                         = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-arithmetic                                 = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-authority-discovery                        = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-beefy                                      = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-block-builder                              = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-blockchain                                 = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-consensus                                  = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-consensus-aura                             = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-consensus-babe                             = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-consensus-slots                            = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-consensus-vrf                              = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-core                                       = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-database                                   = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-debug-derive                               = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-externalities                              = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-finality-grandpa                           = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-inherents                                  = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-io                                         = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-keyring                                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-keystore                                   = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-maybe-compressed-blob                      = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-mmr-primitives                             = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-npos-elections                             = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-offchain                                   = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-panic-handler                              = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-rpc                                        = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-runtime                                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-runtime-interface                          = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-runtime-interface-proc-macro               = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-session                                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-staking                                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-state-machine                              = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-std                                        = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-storage                                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-timestamp                                  = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-tracing                                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-transaction-pool                           = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-transaction-storage-proof                  = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-trie                                       = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-version                                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-version-proc-macro                         = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-wasm-interface                             = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
sp-weights                                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
substrate-build-script-utils                  = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
substrate-frame-rpc-system                    = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
substrate-prometheus-endpoint                 = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
substrate-rpc-client                          = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
substrate-state-trie-migration-rpc            = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
substrate-wasm-builder                        = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
try-runtime-cli                               = { git = "https://github.com/darwinia-network/substrate", branch = "polkadot-v0.9.37" }
