[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "State storage precompiles for EVM pallet."
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-message-transact"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia"
version     = "6.0.0"

[dependencies]
# crates.io
codec      = { default-features = false, package = "parity-scale-codec", version = "3.2.1", features = ["derive"] }
scale-info = { default-features = false, version = "2.3.0", features = ["derive"] }
ethereum = { version = "0.12.0", default-features = false, features = ["with-codec"] }

# frontier
fp-evm     = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.30" }
fp-ethereum     = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.30" }
pallet-evm = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.30" }
pallet-ethereum = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "polkadot-v0.9.30" }

# paritytech
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
frame-system  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-std        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-core        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"ethereum/std",
	"scale-info/std",

	# frontier
	"fp-evm/std",
	"fp-ethereum/std",
	"pallet-evm/std",
	"pallet-ethereum/std",

	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-std/std",
	"sp-core/std",
]
