[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia node."
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia"
version     = "6.0.0"

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }

[dependencies]
# crates.io
array-bytes = { version = "6.0" }
async-trait = { version = "0.1" }
clap        = { version = "4.0", features = ["derive"] }
codec       = { package = "parity-scale-codec", version = "3.2" }
futures     = { version = "0.3" }
jsonrpsee   = { version = "0.16", features = ["server"] }
log         = { version = "0.4" }
serde       = { version = "1.0", features = ["derive"] }

# cumulus
cumulus-client-cli                      = { git = "https://github.com/paritytech/cumulus", branch = "draft-polkadot-v0.9.38" }
cumulus-client-collator                 = { git = "https://github.com/paritytech/cumulus", branch = "draft-polkadot-v0.9.38" }
cumulus-client-consensus-aura           = { git = "https://github.com/paritytech/cumulus", branch = "draft-polkadot-v0.9.38" }
cumulus-client-consensus-common         = { git = "https://github.com/paritytech/cumulus", branch = "draft-polkadot-v0.9.38" }
cumulus-client-network                  = { git = "https://github.com/paritytech/cumulus", branch = "draft-polkadot-v0.9.38" }
cumulus-client-service                  = { git = "https://github.com/paritytech/cumulus", branch = "draft-polkadot-v0.9.38" }
cumulus-primitives-core                 = { git = "https://github.com/paritytech/cumulus", branch = "draft-polkadot-v0.9.38" }
cumulus-primitives-parachain-inherent   = { git = "https://github.com/paritytech/cumulus", branch = "draft-polkadot-v0.9.38" }
cumulus-relay-chain-interface           = { git = "https://github.com/paritytech/cumulus", branch = "draft-polkadot-v0.9.38" }

# darwinia
crab-runtime     = { path = "../runtime/crab" }
darwinia-runtime = { path = "../runtime/darwinia" }
dc-primitives    = { path = "../core/primitives" }
pangolin-runtime = { path = "../runtime/pangolin" }

# frontier
fc-cli          = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v0.9.36" }
fc-consensus    = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v0.9.36" }
fc-db           = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v0.9.36" }
fc-mapping-sync = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v0.9.36" }
fc-rpc          = { features = ["rpc_binary_search_estimate"], git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v0.9.36" }
fc-rpc-core     = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v0.9.36" }
fp-evm          = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v0.9.36" }
fp-rpc          = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v0.9.36" }
fp-storage      = { git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v0.9.36" }

# polkadot
polkadot-cli        = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38" }
polkadot-parachain  = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38" }
polkadot-service    = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38" }
xcm                 = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.38" }

# substrate
frame-benchmarking             = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
frame-benchmarking-cli         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-basic-authorship            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-chain-spec                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-cli                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-client-api                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-consensus                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-consensus-aura              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-executor                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-keystore                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-network                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-network-common              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-offchain                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-rpc                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-rpc-api                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-service                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-sysinfo                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-telemetry                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-tracing                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-transaction-pool            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sc-transaction-pool-api        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-api                         = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-block-builder               = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-blockchain                  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-consensus                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-consensus-aura              = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-core                        = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-inherents                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-io                          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-keystore                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-offchain                    = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-runtime                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-session                     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-timestamp                   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
sp-transaction-pool            = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
substrate-frame-rpc-system     = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
substrate-prometheus-endpoint  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38" }
try-runtime-cli                = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.38", optional = true}

[features]
default = []

fast-runtime = []

runtime-benchmarks = [
	# darwinia
	"darwinia-runtime/runtime-benchmarks",

	# polkadot
	"polkadot-cli/runtime-benchmarks",
]

try-runtime = [
	# darwinia
	"crab-runtime/try-runtime",
	"darwinia-runtime/try-runtime",
	"pangolin-runtime/try-runtime",

	# substrate
	"try-runtime-cli/try-runtime",
]

all-native = [
	# darwinia
	"kusama-native",
	"rococo-native",
]
kusama-native = [
	# polkadot
	"polkadot-cli/kusama-native",
]
rococo-native = [
	# polkadot
	"polkadot-cli/rococo-native",
]
