[package]
name        = "dc-inflation"
description = "Darwinia economic inflation mechanism implementation."
authors     = { workspace = true }
edition     = { workspace = true }
version     = { workspace = true }

[dependencies]
# crates.io
primitive-types = { version = "0.12", default-features = false }

# darwinia
dc-types = { path = "../types" }

# github
substrate-fixed = { default-features = false, git = "https://github.com/encointer/substrate-fixed" }

[dev-dependencies]
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[features]
default = ["std"]
std = [
	# crates.io
	"primitive-types/std",

	# github
	"substrate-fixed/std",
]
