[package]
name        = "dc-primitives"
description = "Darwinia chain core primitives."
authors     = { workspace = true }
edition     = { workspace = true }
version     = { workspace = true }

[dependencies]
# darwinia
dc-types = { path = "../types" }

# moonbeam
account = { default-features = false, git = "https://github.com/darwinia-network/moonbeam", branch = "polkadot-v0.9.36" }

# substrate
sp-core    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[features]
default = ["std"]
std = [
	# moonbeam
	"account/std",
	# substrate
	"sp-core/std",
	"sp-runtime/std",
]
