[package]
name        = "darwinia-message-gadget"
description = "Darwinia messages gadget."
authors     = { workspace = true }
edition     = { workspace = true }
version     = { workspace = true }


[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", version = "3.3", default-features = false }
scale-info = { version = "2.3", default-features = false, features = ["derive"] }

# frontier
pallet-evm = { default-features = false, git = "https://github.com/darwinia-network/frontier", branch = "polkadot-v0.9.36" }

# paritytech
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-system  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-io         = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-std        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[dev-dependencies]
# crates.io
array-bytes = { version = "6.0" }

# substrate
pallet-balances  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime       = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[features]
default = ["std"]

std = [
	# crates.io
	"codec/std",
	"scale-info/std",

	# frontier
	"pallet-evm/std",

	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
]

try-runtime = ["frame-support/try-runtime"]
