[package]
authors     = ["Darwinia Network <hello@darwinia.network>"]
description = "Darwinia parachain staking."
edition     = "2021"
homepage    = "https://darwinia.network"
license     = "GPL-3.0"
name        = "darwinia-staking"
readme      = "README.md"
repository  = "https://github.com/darwinia-network/darwinia"
version     = "6.0.0"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", version = "3.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false }

# subtrate
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
frame-system  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-core       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }
sp-runtime    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.30" }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"scale-info/std",

	# subtrate
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
]

# TODO: runtime-benchmarks, try-runtime
